[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.31.0"
databases = {extras = ["sqlite"], version = "^0.9.0"}
passlib = "^1.7.4"
sqlmodel = "^0.0.18"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
